// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Label
    classes={
      Object {
        "close": "close",
        "cursor": "cursor",
        "default": "default",
        "label": "label",
      }
    }
    theme="default"
  >
    Label
  </Label>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "Label",
        undefined,
      ],
      "className": "label default",
      "id": undefined,
      "onClick": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      "Label",
      undefined,
    ],
    "type": "label",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Label",
          undefined,
        ],
        "className": "label default",
        "id": undefined,
        "onClick": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        "Label",
        undefined,
      ],
      "type": "label",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`LabelJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Label)
    theme="default"
  >
    Label
  </Jss(Label)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": "Label",
      "classes": Object {
        "close": "Label-close-0-1-4",
        "cursor": "Label-cursor-0-1-2",
        "default": "Label-default-0-1-3",
        "label": "Label-label-0-1-1",
      },
      "theme": "default",
    },
    "ref": null,
    "rendered": "Label",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "Label",
        "classes": Object {
          "close": "Label-close-0-1-4",
          "cursor": "Label-cursor-0-1-2",
          "default": "Label-default-0-1-3",
          "label": "Label-label-0-1-1",
        },
        "theme": "default",
      },
      "ref": null,
      "rendered": "Label",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
